--- a/app/views/pages/auteure.html.erb
+++ b/app/views/pages/auteure.html.erb
@@ -1,19 +1,21 @@
 <div class="container-all-dimension">
-  <div id="auteur-presentation" style="display: flex;">
-    <div class="div-picture-background">
-      <%= cl_image_tag @user.photo %>
-      <p style="margin-top: 20px !important; font-size: 13px"><%= @user.description %>/p>
-    </div>
-    <div class="texts-auteur" style="margin-left: 30px">
-      <p style="width: 120px;"><%= @user.intro %></p>
-        <br>
-      <p style="margin-left: 20% !important;width: 120px;"><%= @user.motto %></p> <br>
+
+    <div id="auteur-presentation" style="display: flex;">
+      <div class="div-picture-background">
+        <%= cl_image_tag @auteur.photo, style:"height:#{@auteur.hauteur}px;" %>
+        <p style="margin-top: 20px !important; font-size: 13px"><%= @auteur.description %>/p>
+      </div>
+      <div class="texts-auteur" style="margin-left: 30px">
+        <p style="width: 120px;"><%= @auteur.intro %></p>
+          <br>
+        <p style="margin-left: 20% !important;width: 120px;"><%= @auteur.motto %></p> <br>
 
 
-      <p style="margin-left: 40% !important;width: 130px;"><%= @user.thanks %></p>
-      <p style="margin-left: 40% !important;"> <3 </p>
+        <p style="margin-left: 40% !important;width: 130px;"><%= @auteur.thanks %></p>
+        <p style="margin-left: 40% !important;"> <3 </p>
+      </div>
     </div>
-  </div>
+
 </div>
 
 
