--- a/app/views/categories/presentation.html.erb
+++ b/app/views/categories/presentation.html.erb
@@ -1,7 +1,7 @@
 <div class="container-all-dimension display-center">
     <div class="intro-category pink-background" style=" <%= @category.title == "Vos commandes" ? "width: 60%" : ""%> ">
       <div class="title-intro">
-        <h3><%= @category.title %></h3>
+        <h3><%= @category.article_title %></h3>
         <h4><%= @category.subtitle %></h4>
       </div>
       <p class="message"><%= @category.description %></p>
