modif last minute

--- a/app/assets/stylesheets/pages/_category.scss
+++ b/app/assets/stylesheets/pages/_category.scss
@@ -44,7 +44,9 @@
     cursor: pointer;
   }
 }
-
+.padding-center {
+  padding-top: 36%
+}
 .gray-background {
   background-color: lightgrey;
   padding: 5px 13px !important;
