--- a/app/views/pages/auteure.html.erb
+++ b/app/views/pages/auteure.html.erb
@@ -1,4 +1,4 @@
-<div class="container-all-dimension">
+<div class="container-all-dimension align-text-padding">
 
     <div id="auteur-presentation" style="display: flex;">
       <div class="div-picture-background">
@@ -12,7 +12,6 @@
 
 
         <p style="margin-left: 40% !important;width: 130px;"><%= @auteur.thanks %></p>
-        <p style="margin-left: 40% !important;"> <3 </p>
       </div>
     </div>
 
