--- a/app/views/pages/auteure.html.erb
+++ b/app/views/pages/auteure.html.erb
@@ -1,4 +1,4 @@
-<div class="container-all-dimension align-text-padding">
+<div class="container-all-dimension">
 
     <div id="auteur-presentation" style="display: flex;">
       <div class="div-picture-background">
