--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Image. | Par Chloé Rolland - Photographe Encadreuse et Peintre</title>
-    <meta name="description" content="Chloé Rolland a choisit le digital pour publier son livre 'À l’ Est du centre.' où elle raconte son aventure depuis plus de 10 ans.">
+    <title>Images et encadrement par Chloé Rolland. </title>
+    <meta name="description" content="Bienvenu.e.s ! Chloé Rolland choisit le digital pour publier son histoire « À l’Est du centre ». Un voyage initiatique raconté à travers sept années de rencontres et de déplacement…">
 
 
-    <meta property="og:title" content="Image. | Par Chloé Rolland - Photographe Encadreuse et Peintre">
+    <meta property="og:title" content="Images et encadrement par Chloé Rolland. ">
     <meta property="og:image" content="https://res.cloudinary.com/dnks6vpqk/image/upload/v1539331237/banner_image.jpg">
-    <meta property="og:description" content="Chloé Rolland a choisit le digital pour publier son livre 'À l’ Est du centre.' où elle raconte son aventure depuis plus de 10 ans.">
+    <meta property="og:description" content="Bienvenu.e.s ! Chloé Rolland choisit le digital pour publier son histoire « À l’Est du centre ». Un voyage initiatique raconté à travers sept années de rencontres et de déplacement…">
     <meta property="og:site_name" content="Image."/>
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@chloerolland">
-    <meta name="twitter:title" content="Image. | Par Chloé Rolland - Photographe Encadreuse et Peintre">
-    <meta name="twitter:description" content="Chloé Rolland a choisit le digital pour publier son livre 'À l’ Est du centre.' où elle raconte son aventure depuis plus de 10 ans.">
+    <meta name="twitter:title" content="Images et encadrement par Chloé Rolland. ">
+    <meta name="twitter:description" content="Bienvenu.e.s ! Chloé Rolland choisit le digital pour publier son histoire « À l’Est du centre ». Un voyage initiatique raconté à travers sept années de rencontres et de déplacement…">
     <meta name="twitter:creator" content="@chloerolland">
     <meta name="twitter:image:src" content="https://res.cloudinary.com/dnks6vpqk/image/upload/v1539331237/banner_image.jpg">
 
@@ -23,6 +23,10 @@
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%#= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
+
+
+
+
 
 
 
