--- a/app/views/shared/_dropdown-burger.html.erb
+++ b/app/views/shared/_dropdown-burger.html.erb
@@ -6,11 +6,11 @@
         <% if category.visible %>
           <div class="margin-by-category">
             <% if !category.with_description? %>
-              <li><%= link_to category.title, categories_title_path(title: category.title_no_space), class:"#{'active-tab' if params[:title] ==  category.title_no_space}" %> </li>
+              <li><%= link_to category.title, categories_title_path(title: category.title_no_space), class:"#{'active-tab' if params[:title] ==  category.title_no_space} btns-burger" %> </li>
             <% end %>
             <% category.albums.each do |album| %>
               <% if album.has_pictures? %>
-                <li><%= link_to album.title, album_path(title: album.title_no_space), class:"#{'active-tab' if params[:title] ==  album.title_no_space}" %>
+                <li><%= link_to album.title, album_path(title: album.title_no_space), class:"#{'active-tab' if params[:title] ==  album.title_no_space} btns-burger" %>
                  </li>
               <% end %>
             <% end %>
@@ -20,11 +20,11 @@
       <% end %>
       <div class="margin-by-category">
         <% if !@auteur.nil? %>
-          <li><%= link_to "L'auteure", auteure_path %> </li>
+          <li><%= link_to "L'auteure", auteure_path, class:"btns-burger" %> </li>
         <% end %>
       </div>
       <div class="margin-by-category">
-        <li><%= link_to "Mentions Légales", mentionslegales_path %> </li>
+        <li><%= link_to "Mentions Légales", mentionslegales_path, class:"btns-burger" %> </li>
       </div>
     </ul>
   </div>
