modif home page

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,13 +1,14 @@
 #footer {
   position: fixed;
   bottom: 0;
-  display: flex;
-  justify-content: center;
   width: 100%;
 }
 
 
 .links-contact {
+  position: relative;
+  display: flex;
+  justify-content: center;
   align-items: center;
   padding: 10px;
   a {
@@ -27,6 +28,22 @@
   }
   a:hover {
     font-size: 30px;
+    text-decoration: none;
+  }
+}
+
+#absolute-right {
+  position: absolute;
+  right: 40px;
+  bottom: 20px;
+  a {
+    font-size: 17px;
+    font-weight: 600;
+    text-decoration: none;
+  }
+  a:hover {
+    font-size: 17px;
+    font-weight: 600;
     text-decoration: none;
   }
 }
