--- a/app/views/categories/presentation.html.erb
+++ b/app/views/categories/presentation.html.erb
@@ -2,7 +2,7 @@
     <div class="intro-category pink-background" style=" <%= @category.title == "Vos commandes" ? "width: 60%" : ""%> ">
       <div class="title-intro">
         <h3><%= @category.article_title %></h3>
-        <h4><%= @category.subtitle %></h4>
+        <h4 style="margin-top: 8px !important;"><%= @category.subtitle %></h4>
       </div>
       <p class="message"><%= @category.description %></p>
     </div>
