--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,7 +9,7 @@
     <%= mail_to "chloe@rollandmail.com" do %>
       <i class="far fa-envelope"></i>
     <% end %>
-    <%= link_to root_path do %>
+    <%= link_to "#", onclick: "myFunction()" do %>
       <i class="far fa-share-square"></i>
     <% end %>
   <% if params[:action] == "home" %>
@@ -25,3 +25,16 @@
 
 
 
+<div class="hidden">
+  <input type="text" value="<%= url_for(:only_path => false) %>" id="myInput">
+</div>
+
+
+<script>
+  function myFunction() {
+    var copyText = document.getElementById("myInput");
+    copyText.select();
+    document.execCommand("copy");
+    alert("Copied the text: " + copyText.value);
+  }
+</script>
