--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -34,15 +34,15 @@
 
 #absolute-right {
   position: absolute;
-  right: 40px;
+  right: 5%;
   bottom: 20px;
   a {
-    font-size: 17px;
+    font-size: 12px;
     font-weight: 600;
     text-decoration: none;
   }
   a:hover {
-    font-size: 17px;
+    font-size: 15px;
     font-weight: 600;
     text-decoration: none;
   }
