--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -15,7 +15,7 @@
   <% if params[:action] == "home" %>
     <div id="absolute-right">
       <%= link_to root_path do%>
-      Site réalisé avec <i class="far fa-heart"></i> par <strong style="color:#EE5F5B; font-weight: 600;">Donatien</strong>
+      Site réalisé avec <i class="far fa-heart" style="color:#EE5F5B; font-weight: 600;"></i> par Donatien
       <% end %>
     </div>
   <% end %>
