--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,39 +1,57 @@
 <div class="container-all-dimension row" style="padding-top: 9vh !important; padding-bottom: 3vh !important;">
-  <div class="col-sm-offset-4 col-sm-4">
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+  <div class="col-sm-offset-1 col-sm-5">
+    <h2>Modifier mon compte</h2> <br>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+      <div class="form-inputs">
+        <%= f.input :email, label:"Email :" %>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+        <% end %>
+
+        <%= f.input :current_password,
+                    hint: "J'ai besoin de ton mot de passe actuel pour toutes modifications",
+                    required: true,
+                    input_html: { autocomplete: "current-password" }, label:"Mot de passe actuel :"  %>
+        <%= f.input :password,
+                    hint: "Laisse le blanc si tu ne veux pas le changer",
+                    required: false,
+                    input_html: { autocomplete: "new-password" }, label:"Nouveau mot de passe" %>
+        <%= f.input :password_confirmation,
+                    required: false,
+                    input_html: { autocomplete: "new-password" }, label:"Confirmation du nouveau mot de passe :"  %>
+      </div>
+
+      <div class="form-actions">
+        <%= f.button :submit, "Modifier" %>
+      </div>
     <% end %>
 
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
+    <%= link_to "Back", :back %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
+  <div class="col-sm-5 col-sm-offset-1">
+    <h2>Modifier l'ordre du Burger</h2>
+
+
+    <div id="categories" class="list-group" data-url="<%= sort_categories_path %>">
+      <% @categories.order('position ASC').each do |category| %>
+        <%= link_to category.title, '#', id:dom_id(category) %>
+      <% end %>
+    </div>
+
+
+
+
   </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
 </div>
-</div>
+
+<style>
+  .list-group {
+    display: flex;
+    flex-direction: column;
+  }
+</style>
