--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,34 +1,48 @@
+<div id="fb-root"></div>
 <div id="footer">
   <div class="links-contact">
-    <%= link_to mentionslegales_path, id:"mini-icon" do %>
-      <i class="far fa-copyright" style="font-size: 23px;"></i>
+    <% if params[:action] == "home" %>
+
+      <div id="absolute-left">
+        <p  style="font-size: 10px;">Tous contenus <i class="far fa-copyright"></i> Chloé Rolland</p>
+        <%= link_to root_path do%>
+        Site internet <i class="far fa-heart" style="color:#EE5F5B; font-weight: 600;"></i> Donatien Rolland
+        <% end %>
+      </div>
     <% end %>
+
     <%= link_to 'https://www.instagram.com/hellolaterre_cr/?hl=fr', target: "_blank" do %>
       <i class="fab fa-instagram"></i>
     <% end %>
-    <%= mail_to "chloe@rollandmail.com" do %>
+    <%= mail_to User.where(auteur: true).first.email do %>
       <i class="far fa-envelope"></i>
     <% end %>
-    <%= link_to "#", onclick: "myFunction()" do %>
-      <i class="far fa-share-square" style="font-size: 23px;"></i>
-    <% end %>
-  <% if params[:action] == "home" %>
-    <div id="absolute-right">
-      <%= link_to root_path do%>
-      Site réalisé avec <i class="far fa-heart" style="color:#EE5F5B; font-weight: 600;"></i> par Donatien
-      <% end %>
+
+
+    <div class="dropup">
+      <div class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="display: flex;">
+        <i class="far fa-share-square" ></i>
+      </div>
+      <div class="dropdown-menu">
+        <!-- Dropdown menu links -->
+        <div style="display: flex; flex-direction: row;">
+          <p onclick="myFunction()" style="cursor: pointer;"><i class="fas fa-link"></i> Copier le lien</p>
+          <a href="mailto:?&amp;body=<%= url_for(:only_path => false) %>&amp;"><i class="far fa-envelope"></i> Envoyer par mail</a>
+          <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fimage.herokuapp.com%2F&amp;src=sdkpreparse" onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,left=,top=,screenX=,screenY=,width=300,height= 400');" target="_blank" title="Share This on Facebook">
+            <i class="fab fa-facebook-f"></i>Facebook
+          </a>
+        </div>
+      </div>
     </div>
-  <% end %>
+
   </div>
 </div>
-
 
 
 
 <div style="opacity: 0; z-index: -2; position: absolute; left: 0; bottom: 0;">
   <input type="text" value="<%= url_for(:only_path => false) %>" id="myInput">
 </div>
-
 
 <script>
   function myFunction() {
@@ -37,4 +51,6 @@
     document.execCommand("copy");
     alert("Copied the text: " + copyText.value);
   }
+
 </script>
+
