--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,16 @@
 
-<div class="banner" style="background-image: url('https://res.cloudinary.com/dnks6vpqk/image/upload/v1541742171/P71_IMG_8331C-min.jpg');">
+<div class="banner hidden-xs" style="background-image: url('https://res.cloudinary.com/dnks6vpqk/image/upload/v1541742171/P71_IMG_8331C-min.jpg');">
 
 <!-- <#%= link_to t(".sign_in", default: "Login"), new_user_session_path, style:"color: white;" %> -->
 
 </div>
+<div class="banner visible-xs" style="background-image: url('https://res.cloudinary.com/dnks6vpqk/image/upload/v1542168632/IMG_3172R.jpg');">
+
+<!-- <#%= link_to t(".sign_in", default: "Login"), new_user_session_path, style:"color: white;" %> -->
+
+</div>
+
+
 
 <div id="footer-white">
   <%= render 'shared/footer', category: nil %>
