--- a/app/views/shared/_navbar-general.html.erb
+++ b/app/views/shared/_navbar-general.html.erb
@@ -12,7 +12,7 @@
 <% end %>
 
 <% if user_signed_in?  %>
-  <div class="edit-website">
+  <div class="edit-website hidden-xs">
     <% if Category.all.count > 0 %>
       <%= link_to category_path(Category.first) do %>
         <i class="far fa-edit"></i>
@@ -27,3 +27,4 @@
     <% end %>
   </div>
 <% end %>
+
